# leetcode

./: .gitignore  CMakeLists.txt  build.sh  check_test_cases.cpp
solutions/: 00001.hpp  00002.hpp  00003.hpp  00004.hpp  00005.hpp  00006.hpp  00007.hpp  00008.hpp  00050.hpp  00077.hpp  00664.hpp  00712.hpp  00852.hpp  01870.hpp  TestUtils.hpp
structures/: SinglyLinkedList.hpp
